--- a/Weeklys.Data/Weeklys.Data.csproj
+++ b/Weeklys.Data/Weeklys.Data.csproj
@@ -55,12 +55,31 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202104152323231_InitialCreate.cs" />
+    <Compile Include="Migrations\202104152323231_InitialCreate.Designer.cs">
+      <DependentUpon>202104152323231_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202104160223343_InitialMigration.cs" />
+    <Compile Include="Migrations\202104160223343_InitialMigration.Designer.cs">
+      <DependentUpon>202104160223343_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Paychecks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Taxes.cs" />
     <Compile Include="Weekly.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202104152323231_InitialCreate.resx">
+      <DependentUpon>202104152323231_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104160223343_InitialMigration.resx">
+      <DependentUpon>202104160223343_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
