--- a/Weeklys.Models/Weeklys.Models.csproj
+++ b/Weeklys.Models/Weeklys.Models.csproj
@@ -54,6 +54,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MoneyFlowCreate.cs" />
+    <Compile Include="MoneyFlowListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
