--- a/Weeklys.WebMVC/Weeklys.WebMVC.csproj
+++ b/Weeklys.WebMVC/Weeklys.WebMVC.csproj
@@ -237,6 +237,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\MoneyFlow\Index.cshtml" />
     <Content Include="Views\MoneyFlow\Create.cshtml" />
+    <Content Include="Views\MoneyFlow\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
