--- a/Weeklys.WebMVC/Weeklys.WebMVC.csproj
+++ b/Weeklys.WebMVC/Weeklys.WebMVC.csproj
@@ -239,6 +239,7 @@
     <Content Include="Views\MoneyFlow\Create.cshtml" />
     <Content Include="Views\MoneyFlow\Details.cshtml" />
     <Content Include="Views\MoneyFlow\Edit.cshtml" />
+    <Content Include="Views\MoneyFlow\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
