--- a/Weeklys.Services/Weeklys.Services.csproj
+++ b/Weeklys.Services/Weeklys.Services.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MoneyFlowService.cs" />
+    <Compile Include="PaychecksService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaxesService.cs" />
   </ItemGroup>
