--- a/Weeklys.WebMVC/Weeklys.WebMVC.csproj
+++ b/Weeklys.WebMVC/Weeklys.WebMVC.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoneyFlowController.cs" />
+    <Compile Include="Controllers\PaychecksController.cs" />
     <Compile Include="Controllers\TaxesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -250,6 +251,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Paychecks\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
